# CUDA-FDTD-simulation

./: .save.vim  CMakeLists.txt  README.md  make.sh
src/: c_arrays.h  cfdtd.cpp  cfdtd.h  cfdtd_wrapper.cpp  cfdtd_wrapper.cu  cfdtd_wrapper.h  cuda_fdtd.h  main.cpp
